--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url= jdbc:mysql://mysql:3306
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/kien_test
 spring.datasource.username=root
 spring.datasource.password=kien16072003
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,3 +9,4 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.generate_statistics=true
+
